# NJEMU

./: .gitignore  CMakeLists.txt  Makefile  Makefile.pc  Makefile.ps2  Makefile.x86_64  README.md
.github/workflows/: computer.yml  ps2.yml  psp-cmake.yml  psp.yml  romcnv.yml
MVS_RESOURCE/: game_name.ini
romcnv/: CMakeLists.txt
romcnv/src/: common.c  common.h  unzip.c  zfile.c  zfile.h  zip.c
romcnv/src/cps2/: romcnv.c
romcnv/src/mvs/: neocrypt.c  neogeo.h  romcnv.c  romcnv.h
src/: emucfg.h  emumain.c  emumain.h  main_ui_draw.h
src/common/: adhoc.c  audio_driver.c  audio_driver.h  cache.c  cmdlist.c  input_driver.c  input_driver.h  loadrom.c  loadrom.h  mp3.c  mp3.h  platform_driver.c  platform_driver.h  power_driver.c  power_driver.h  sound.c  state.c  thread_driver.c  thread_driver.h  ticker_driver.c  ticker_driver.h  ui_text_driver.c  ui_text_driver.h  video_driver.c  video_driver.h
src/cps1/: driver.c  memintrf.c  psp_sprite.c  timer.c  vidhrdw.c
src/cps2/: driver.c  memintrf.c  psp_sprite.c
src/cpu/fame/: fame.h  fame_memory.h  fame_types.h  famec.c  m68000.c  m68000.h
src/cpu/m68000/: c68k.c  c68k.h  c68k_op.c  c68kmacro.h  m68000.c  m68000.h
src/cpu/z80/: cz80.c  cz80.h  cz80_op.c  cz80_opED.c  cz80_opXY.c  cz80macro.h  z80.c  z80.h
src/makefiles/: CPS1.mak  CPS2.mak  MVS.mak  NCDZ.mak
src/mvs/: biosmenu.c  biosmenu.h  driver.c  inptport.c  memintrf.c  mvs.c  mvs.h  neocrypt.c  pd4990a.c  ps2_sprite.c  psp_sprite.c  timer.c  vidhrdw.c  vidhrdw.h  x86_64_sprite.c
src/ncdz/: cdda.c  cdrom.c  driver.c  memintrf.c  memintrf.h  ncdz.c  psp_sprite.c  timer.c  vidhrdw.c
src/ps2/: ps2.h  ps2_audio.c  ps2_input.c  ps2_no_gui.c  ps2_platform.c  ps2_power.c  ps2_thread.c  ps2_ticker.c  ps2_ui_text.c  ps2_video.c
src/psp/: SystemButtons.h  adhoc.c  config.c  config.h  filer.c  filer.h  png.c  png.h  psp.c  psp.h  psp_audio.c  psp_no_gui.c  psp_platform.c  psp_thread.c  psp_ticker.c  psp_video.c  ui.c  ui.h  ui_draw.c  ui_draw.h  ui_menu.c  ui_menu.h  wallpaper.c  wallpaper.h
src/sound/: ym2151.c  ym2610.c
src/x86_64/: x86_64.h  x86_64_audio.c  x86_64_input.c  x86_64_no_gui.c  x86_64_platform.c  x86_64_power.c  x86_64_thread.c  x86_64_ticker.c  x86_64_ui_text.c  x86_64_video.c
src/zip/: unzip.h  zfile.c  zfile.h
